07-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      serviceAccountName: haproxy-kubernetes-ingress
      containers:
      - name: haproxy-ingress
        image: haproxytech/kubernetes-ingress
        args:
          - --configmap=haproxy-controller/haproxy-kubernetes-ingress
          - --http-bind-port=8080
          - --https-bind-port=8443
          - --ingress.class=haproxy
          - --publish-service=haproxy-controller/haproxy-kubernetes-ingress
          - --log=debug
