08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-kubernetes-ingress
  namespace: haproxy-controller
spec:
  selector:
    run: haproxy-ingress
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
